<resources>
    <string name="app_name">Animore Project</string>
    <string name="app_nameCut1">Anim</string>
    <string name="app_nameCut2">re</string>
    <string name="app_nameCut3">Project</string>
    <string name="app_wip"><i>Aviso: Este aplicativo está em fase desenvolvimento.\nTodo o conteúdo demonstrado aqui está sujeito a mudanças.\nFique ligado para mais progressos do projeto!\n - Rafael, 2023.</i></string>
    <string name="app_copyright">&#0169; Rafael Henrique Alves Batista - 2023</string>
    <string name="title_login">Login</string>
    <string name="title_forgotPassword">Esqueci a senha</string>
    <string name="title_profileDetails">Detalhes do Perfil</string>
    <string name="title_findBestFriend">Encontre o amigo dos seus sonhos</string>
    <string name="title_featuredAnimals">Animais em destaque</string>
    <string name="title_featuredAccesories">Itens em alta</string>
    <string name="title_statistics">Estatísticas</string>
    <string name="title_searchAnimals">Procurar Animais</string>
    <string name="title_searchAccesories">Procurar Acessórios</string>
    <string name="title_yourPhoto">Detalhes da foto:</string>
    <string name="title_registerAnimal">Escolha o que deseja registrar:</string>
    <string name="title_selectTypeAnimal">Selecione o tipo e raça do animal:</string>
    <string name="title_photoAnimal">Imagem do animal:</string>
    <string name="title_selectTypeAccesory">Selecione o tipo de acessório:</string>
    <string name="title_photoAccesory">Imagem do acessório:</string>
    <string name="title_myAnimals"><u> Meus animais </u></string>
    <string name="title_description">Descrição</string>
    <string name="title_statusAnimal">Status do Animal</string>
    <string name="title_vacines">Vacinas</string>
    <string name="title_imagesAnimal">Imagens do Animal</string>
    <string name="title_ownerAnimal">Dono do Animal</string>
    <string name="title_myAcessories"><u> Meus acessórios </u></string>
    <string name="text_welcome_1">Bem vindo a Animore Project!\nEncontre o melhor amigo dos sonhos,\nou venha doar para os seus amigos\nde graça!\n\nVamos começar?</string>
    <string name="text_welcome_2">Escolha uma função no aplicativo</string>
    <string name="text_welcome_2_Donate">Função "Doar" selecionada!</string>
    <string name="text_welcome_2_Adopt">Função "Adotar" selecionada!</string>
    <string name="text_welcome_3">Conte-nos um pouco sobre você</string>
    <string name="text_noRegister">Não tem cadastro?</string>
    <string name="text_zero">0</string>
    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_three">3</string>
    <string name="text_four">4</string>
    <string name="text_five">5</string>
    <string name="text_hyphen">-</string>
    <string name="text_topic">•</string>
    <string name="text_forgotPasswordDescription">Informe o e-mail onde deseja redefinir a senha.</string>
    <string name="text_years">anos</string>
    <string name="text_weight">Kg</string>
    <string name="text_noAnimals">Você ainda não possui nenhum animal registrado.\nFaça um registro pressionando o botão abaixo.</string>
    <string name="text_noVacines">Nenhuma vacina.</string>
    <string name="text_noDescription"><b>Sem descrição.</b></string>
    <string name="text_noAcessories">A sua cesta está vazia.\nAdicione algo fazendo um registro abaixo.</string>
    <string name="desc_animals1">Animais    </string>
    <string name="desc_likes">Curtidas   </string>
    <string name="desc_followers">Seguidores </string>
    <string name="desc_search">Procurar</string>
    <string name="desc_contacts">Contatos</string>
    <string name="desc_events">Compromissos</string>
    <string name="desc_home">Página Principal</string>
    <string name="desc_users">Usuários</string>
    <string name="desc_animals2">Animais</string>
    <string name="desc_accesories">Acessórios</string>
    <string name="desc_finishedDonations">Doações feitas</string>
    <string name="link_registerInvite"><u>Faça um agora mesmo!</u></string>
    <string name="link_forgotPassword"><u>Esqueçi a senha.</u></string>
    <string name="btn_start">Começar -></string>
    <string name="btn_donate">Doar</string>
    <string name="btn_adopt">Adotar</string>
    <string name="btn_continue">Continuar -></string>
    <string name="btn_enter">Entrar</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_quit">Sair</string>
    <string name="btn_cursorLeft">&#0060;</string>
    <string name="btn_cursorRight">></string>
    <string name="btn_viewPhoto">Detalhes da foto</string>
    <string name="btn_importPhoto">Importar foto</string>
    <string name="btn_sendEmail">Enviar e-mail</string>
    <string name="btn_edit">+ Editar</string>
    <string name="btn_delete">x Excluir</string>
    <string name="btn_save">v Salvar</string>
    <string name="btn_cancel">&#0060;- Cancelar</string>
    <string name="btn_searchAnimals">Procurar Animais</string>
    <string name="btn_searchAccessories">Procurar Acessórios</string>
    <string name="btn_animal">Animal</string>
    <string name="btn_accesory">Acessório</string>
    <string name="btn_animalMale">Macho</string>
    <string name="btn_animalFemale">Fêmea</string>
    <string name="btn_animalUnknown">Não sabe</string>
    <string name="btn_addPhoto">Adicionar foto ou vídeo</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_registerAnimal">Cadastrar Animal</string>
    <string name="btn_adoptAnimal">Adotar Animal</string>
    <string name="btn_readMore">Ler Mais</string>
    <string name="btn_readLess">Ler Menos</string>
    <string name="btn_registerAcessory">Cadastrar Acessório</string>
    <string name="prompt_name">Nome:</string>
    <string name="prompt_phone">Número de celular:</string>
    <string name="prompt_email">E-mail:</string>
    <string name="prompt_password">Senha:</string>
    <string name="prompt_address">Rua:</string>
    <string name="prompt_district">Bairro:</string>
    <string name="prompt_city">Cidade:</string>
    <string name="prompt_state">Estado:</string>
    <string name="prompt_photo">Foto:</string>
    <string name="prompt_obligatorySymbol">*</string>
    <string name="prompt_age">Idade:</string>
    <string name="prompt_weight">Peso:</string>
    <string name="prompt_vacines">Vacinas:</string>
    <string name="prompt_sex">Sexo:</string>
    <string name="prompt_descriptionAnimal">Descrição do animal:</string>
    <string name="prompt_addPhotos">Adicionar fotos ou vídeos (mínimo 1)</string>
    <string name="prompt_descriptionAccesory">Descrição do acessório:</string>
    <string name="hint_email">Digite o email&#8230;</string>
    <string name="hint_password">Digite a senha&#8230;</string>
    <string name="hint_name">Digite o nome&#8230;</string>
    <string name="hint_phone">Digite o DDD + número&#8230;</string>
    <string name="hint_phoneMask">+55 (00) 00000&#8211;0000</string>
    <string name="hint_address">Informe a rua onde mora&#8230;</string>
    <string name="hint_district">Informe o bairro&#8230;</string>
    <string name="hint_city">Informe a cidade&#8230;</string>
    <string name="hint_state">Informe o estado&#8230;</string>
    <string name="hint_search_1">Procurar por animais, acessórios&#8230;</string>
    <string name="hint_animalType">Tipo do animal</string>
    <string name="hint_animalBreed">Raça do animal</string>
    <string name="hint_animalName">Nome do animal&#8230;</string>
    <string name="hint_animalAge">Idade do animal&#8230;</string>
    <string name="hint_animalWeight">Peso do animal&#8230;</string>
    <string name="hint_animalDescription">Escreva uma descrição ou história sobre o animal&#8230;</string>
    <string name="hint_animalVacines">Vacinas do animal</string>
    <string name="hint_accesoryType">Tipo de acessório</string>
    <string name="hint_accesoryName">Nome do acessório&#8230;</string>
    <string name="hint_accesoryDescription">Escreva uma descrição ou história sobre o acessório&#8230;</string>
    <string name="hint_message">Mande uma mensagem&#8230;</string>
    <string name="socialMedia_signInGoogle"><u>Continuar com Google</u></string>
    <string name="socialMedia_signInFacebook"><u>Continuar com Facebook</u></string>
    <string name="socialMedia_signInTwitter"><u>Continuar com Twitter</u></string>
    <string name="socialMedia_signUpGoogle"><u>Registrar com Google</u></string>
    <string name="socialMedia_signUpFacebook"><u>Registrar com Facebook</u></string>
    <string name="socialMedia_signUpTwitter"><u>Registrar com Twitter</u></string>
    <string name="user_name">Nome</string>
    <string name="user_email">E-mail</string>
    <string name="user_phone">Celular</string>
    <string name="user_address">Rua</string>
    <string name="user_district">Bairro</string>
    <string name="user_state">Estado</string>
    <string name="user_animals">Animais:</string>
    <string name="user_followers">Seguidores:</string>
    <string name="user_since">Desde:</string>
    <string name="user_donations">Doações:</string>
    <string name="user_likes">Curtidas:</string>
    <string-array name="animal_types">
        <item>Cachorro</item>
        <item>Gato</item>
        <item>Pássaro</item>
        <item>Rato</item>
        <item>Outro</item>
    </string-array>
    <string-array name="animal_breedDog">
        <item>Bulldog</item>
        <item>Border Collie</item>
        <item>Fox Paulistinha</item>
        <item>Lhasa Apso</item>
        <item>Pastor Alemão</item>
        <item>Pinscher</item>
        <item>Pug</item>
        <item>Rottweiler</item>
        <item>Shih Tzu</item>
        <item>Yorkshire</item>
        <item>SRD (Sem Raça Definida)</item>
        <item>Outro</item>
    </string-array>
    <string-array name="animal_breedCat">
        <item>Angorá Turco</item>
        <item>Azul Russo</item>
        <item>Gato Exótico</item>
        <item>Gato Persa</item>
        <item>Himalaio</item>
        <item>Maine Coon</item>
        <item>Ragdoll</item>
        <item>Siamês</item>
        <item>Snowshoe</item>
        <item>Sphynx</item>
        <item>SRD (Sem Raça Definida)</item>
        <item>Outro</item>
    </string-array>
    <string-array name="animal_breedBird">
        <item>Agapornis</item>
        <item>Cacatua</item>
        <item>Calopsita</item>
        <item>Canário</item>
        <item>Coleiro</item>
        <item>Papagaio</item>
        <item>Pardal</item>
        <item>Periquito</item>
        <item>Ring Neck</item>
        <item>Galinha</item>
        <item>Outro</item>
    </string-array>
    <string-array name="animal_breedRat">
        <item>Camundongo</item>
        <item>Chinchila</item>
        <item>Gerbil</item>
        <item>Porquinho-da-Índia</item>
        <item>Ratazana</item>
        <item>Rato-de-telhado</item>
        <item>Rato da Noruega</item>
        <item>Twister</item>
        <item>Outro</item>
    </string-array>
    <string-array name="animal_breedOther">
        <item>SRD (Sem Raça Definida)</item>
        <item>Outro</item>
    </string-array>
    <string-array name="animal_vacinesDog">
        <item>R8</item>
        <item>Raiva</item>
        <item>Gripe Canina</item>
        <item>Outro</item>
    </string-array>
    <string name="content_menu1">Botão de menu do aplicativo.</string>
    <string name="content_menu2">Botão de compartilhar a página.</string>
    <string name="content_contact">Ícone de um pessoa, usada para representar um contato.</string>
    <string name="content_calendar">Ícone de um calendário.</string>
    <string name="content_home">Ícone de uma casa, usada para representar a página inicial.</string>
    <string name="content_add">Ícone de um sinal de mais.</string>
    <string name="content_leaf">Ícone de uma folha.</string>
    <string name="content_basket">Ícone de uma cesta.</string>
</resources>