<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentListaAcessorios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_myAcessories"
        android:textColor="@color/text_800"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"/>

    <!-- LISTA ACESSORIOS -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvListaAcessorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <!-- PLACEHOLDER QUANDO A LISTA ESTIVER VAZIA -->
    <LinearLayout
        android:id="@+id/llyListaVazia2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="50dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_discord_basket"
            android:contentDescription="@string/content_basket"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_noAcessories"
            android:textSize="15sp"
            android:textColor="@color/text_700"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnCadastrarAcessorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_registerAcessory"
            android:textSize="15sp"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

</LinearLayout>
