<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaMeusAnimais"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbarApp"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/botaoMenu"
                android:src="@drawable/ic_botao_menu"
                android:background="@color/primary_500"
                android:clickable="true"
                android:focusable="true"
                android:stateListAnimator="@animator/button_click_effect_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/content_menu1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nomeApp"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="21sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/botaoMenu"
                android:layout_marginStart="15dp"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/botaoCompartilhar"
                android:src="@drawable/ic_botao_compartilhar"
                android:background="@color/primary_500"
                android:clickable="true"
                android:focusable="true"
                android:stateListAnimator="@animator/button_click_effect_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/content_menu2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- LAYOUT DA PAGINA -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drlPagina"
            android:layout_width="match_parent"
            android:layout_height="531dp"
            tools:openDrawer="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAdicionar"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="16dp"
                    android:foreground="@drawable/ic_botao_adicionar"
                    android:backgroundTint="@color/primary_500"
                    app:borderWidth="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/content_add"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="531dp"
                    android:fillViewport="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- SEGURA O SCROLL VIEW -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title_myAnimals"
                                android:textColor="@color/text_800"
                                android:textStyle="bold"
                                android:textSize="25sp"
                                android:gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="15dp"/>

                            <!-- LISTA ANIMAIS -->
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rcvListaAnimais"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone"/>

                            <!-- PLACEHOLDER QUANDO A LISTA ESTIVER VAZIA -->
                            <LinearLayout
                                android:id="@+id/llyListaVazia"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center"
                                android:paddingBottom="50dp">
                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:background="@drawable/ic_discord_leaf"
                                    android:contentDescription="@string/content_leaf"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_noAnimals"
                                    android:textSize="15sp"
                                    android:textColor="@color/text_700"
                                    android:layout_marginTop="10dp"/>
                                <Button
                                    android:id="@+id/btnCadastrarAnimal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/btn_registerAnimal"
                                    android:textSize="15sp"
                                    android:layout_marginTop="25dp"/>
                            </LinearLayout>

                        </LinearLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- MENU LATERAL -->
            <com.google.android.material.navigation.NavigationView
                android:id="@+id/nvvMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:headerLayout="@layout/menu_head"
                app:menu="@menu/menu_body"/>

        </androidx.drawerlayout.widget.DrawerLayout>

        <!-- FOOTER / MENU DO APP -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:background="@color/text_300"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <!-- OPCAO 1 DO MENU - PAGINA PRINCIPAL -->
            <LinearLayout
                android:id="@+id/llyFooterMenuOpcao4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/llyFooterMenuOpcao2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@mipmap/ic_casa_foreground"
                    android:backgroundTint="@color/text_700"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/content_home"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/desc_home"
                    android:textSize="16sp"
                    android:textColor="@color/text_600"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>
            <!-- OPCAO 2 DO MENU - CONTATOS -->
            <LinearLayout
                android:id="@+id/llyFooterMenuOpcao2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="85dp"
                app:layout_constraintStart_toStartOf="@id/llyFooterMenuOpcao4"
                app:layout_constraintEnd_toEndOf="@id/llyFooterMenuOpcao3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@mipmap/ic_contato_foreground"
                    android:backgroundTint="@color/text_700"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/content_contact"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/desc_contacts"
                    android:textSize="16sp"
                    android:textColor="@color/text_600"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>
            <!-- OPCAO 3 DO MENU - COMPROMISSOS -->
            <LinearLayout
                android:id="@+id/llyFooterMenuOpcao3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toStartOf="@id/llyFooterMenuOpcao2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@mipmap/ic_calendario_foreground"
                    android:backgroundTint="@color/text_700"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/content_calendar"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/desc_events"
                    android:textSize="16sp"
                    android:textColor="@color/text_600"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>